# qrProducts

./: db.py  init.sh  pyproject.toml
example/: data.py
qrProducts/: __init__.py
qrProducts/templates/: 404.html  base.html  notFound.html  qr.html
